--- a/youtube.html
+++ b/youtube.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="youtube.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <div id="box-container">
-            <input id="Search-box" type="text" name="search-box"  value="" placeholder="type ehich you want">
+            <input id="Search-box" type="text" name="search-box" value="" placeholder="type ehich you want">
             <input type="button" value="" id="searchBtn" style="width: 23p;">
         </div>
     </header>
-   
-
-<script src="DOM.js"></script>
+    <article>
+        <div id="page-content">
+           
+        </div>
+    </article>
+           <footer>
+            <input type="button" value="previous" id="previous-btn" style="width: 23p;">
+            <input type="button" value="Next" id="next-btn" style="width: 23p;">
+           </footer>
+    <script src="DOM.js"></script>
 </body>
+
 </html>
